# AmazingGroup

./: .envrc  .gitignore  Makefile  README.md  a_maze_ing.py  aggiornamenti.txt  check_repo.sh  config.py  config.txt  display.py  maze.txt  pyproject.toml  test_config.py
.claude/: settings.local.json
display/: Colors.py  display.py
file_vari/: how_to_start.txt
graphic/: Colors.py  __init__.py  display.py  themes.py
mazegen/: __init__.py  generator.py  maze.py  solver.py
