
[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator module"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "pydantic"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
