
[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator module"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "pydantic"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
exclude = [
    "__pycache__",
    ".mypy_cache"
]